--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         }
         
         .values-section {
-            background-image: url(images/valores.jpg);
+            background-image: url(images/waffle.jpeg);
         }
         
         .value-card {
