--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             margin: 0;
             padding: 0;
             overscroll-behavior: none;
+            overflow-x: hidden;
         }
         
         .full-bg-section {
@@ -434,8 +435,10 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-white fixed-top">
         <div class="container">
-           <img src="images/logo.png" alt="Logo" class="navbar-logo"> 
-            <a class="navbar-text d-none logo d-lg-block" href="#inicio">ICE<span>LOVE</span></a>
+           <a class="navbar-brand d-flex align-items-center" href="#inicio">
+                <img src="images/logo.png" alt="Logo" class="navbar-logo">
+                <span class="logo d-none d-lg-block ms-2">ICE<span>LOVE</span></span>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
