--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
             line-height: 1.6;
         }
 
-        html, body {
+        html {
+            overflow-x: hidden;
+        }
+
+        body {
             margin: 0;
             padding: 0;
             overscroll-behavior: none;
-            overflow-x: hidden;
         }
-        
+                
         .full-bg-section {
             background-size: cover;
             background-position: center;
